# src/routes/member.ts
@@ -16,7 +16,7 @@ router.post('/register', registerMember)
 router.post('/login', loginMember)
 router.post('/refresh-token', refreshToken)
 router.post('/:id/photo', imageUpload.single('photo'), uploadPhoto)
-router.post('/:id/favourites', addFavourite)
+router.post('/:id/favourites/:hotelId', addFavourite)
 router.get('/:id/favourites', listFavourites)
 router.delete('/:id/favourites/:hotelId', removeFavourite)
 
